--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap</title>
+    <title>Document</title>
     <link href="./bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js" defer></script>
     <link rel="stylesheet" href="./style.css" style="text/css">
@@ -38,11 +38,34 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid">
-          <div class="text-center col-lg-12 d-none d-md-block d-lg-block m-3">
-            <img src="hell.gif" alt="this is my hell" style="width: 75%;">
+      <!-- prasideda korteles -->
+      <div class="row mt-2 no-gutter">
+        <div class="card col-sm mb-1 me-1" >
+            <img src="photo_gallery/one.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Įkvėpimas</h5>
+              <p class="card-text">Užeik ir pamatyk</p>
+              <a href="https://www.lndm.lt/ndg/" class="btn border-success" target="blank">Daugiau informacijos</a>
+            </div>
+          </div>
+        <div class="card col-sm mb-1 me-1" >
+            <img src="photo_gallery/two.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Aplinka</h5>
+              <p class="card-text">Išlysk į lauką</p>
+              <a href="#" class="btn border-success">Daugiau informacijos</a>
+            </div>
+          </div>
+        <div class="card col-sm mb-1" >
+            <img src="photo_gallery/three.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Balansas</h5>
+              <p class="card-text">Pailsėk arba akis pamankštink ir pasižiūrėk į tolį</p>
+              <a href="#" class="btn border-success">Daugiau informacijos</a>
+            </div>
           </div>
       </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
